--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -6,13 +6,21 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
 <div class="windows">
-    <div class="widget">
-        <p class="txt">Lorem ipsum dolor sit amet.</p>
+    <div class="widgets">
+        <div class="txt">Widgets</div>
+    </div>
+    <div class="widgets-group">
+        <div class="small-widget">Big Widgets</div>
+        <div class="small-widget">Big Widgets</div>
+        <div class="small-widget">Big Widgets</div>
+    </div>
+    <div class="contact">
+        <div class="txt">Contact</div>
     </div>
 </div>
 
